--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ h1 {
 p {
     margin: 5px 0;
 }
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 600px) {
     .one{
         flex-direction: column;
     }
